# ATK-HostPC

./: .claude_config  .gitignore  CLAUDE.md  CMakeLists.txt  build.bat  build.sh  clean  quick_build.sh
.vercel/: project.json
config/: performance_config.json
docs/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README.md  优化与问题专题.md  开发文档.md  技术专题.md  架构与重构专题.md
resources/: Info.plist  app.qrc
resources/styles/: default.qss  modern.qss
scripts/: stress_test.py  stress_test_report_20250722_215309.json
src/: constants.h  main.cpp  main_debug.cpp  main_simple.cpp  main_simple_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow_simple.cpp  mainwindow_simple.h  stub_implementations.cpp
src/communication/: canworker.cpp  canworker.h  communicationbufferpool.cpp  communicationbufferpool.h  communicationmanager.cpp  communicationmanager.h  dataprocessworker.cpp  dataprocessworker.h  icommunication.cpp  icommunication.h  modbusworker.cpp  modbusworker.h  protocolparser.cpp  protocolparser.h  serialcommunication.cpp  serialcommunication.h  serialworker.cpp  serialworker.h  tcpcommunication.cpp  tcpcommunication.h  tcpworker.cpp  tcpworker.h
src/config/: configmanager.cpp  configmanager.h
src/core/: adaptiveconfigmanager.cpp  adaptiveconfigmanager.h  businesslogicmanager.cpp  businesslogicmanager.h  continuousoptimizer.cpp  continuousoptimizer.h  errorhandler.cpp  errorhandler.h  eventcoordinator.cpp  eventcoordinator.h  intelligentanalyzer.cpp  intelligentanalyzer.h  loadbalancer.cpp  loadbalancer.h  memoryoptimizer.cpp  memoryoptimizer.h  mlperformancepredictor.cpp  mlperformancepredictor.h  performanceanalyzer.cpp  performanceanalyzer.h  performanceconfigmanager.cpp  performanceconfigmanager.h  performancemonitor.cpp  performancemonitor.h  systemmanager.cpp  systemmanager.h  uimanager.cpp  uimanager.h
src/error/: errorhandler.h  recoverystrategies.h
src/logger/: logmanager.cpp  logmanager.h
src/ui/: alarmwidget.cpp  alarmwidget.h  chartwidget.cpp  chartwidget.h  communicationwidget.cpp  communicationwidget.h  datamonitorwidget.cpp  datamonitorwidget.h  datarecordwidget.cpp  datarecordwidget.h  devicecontrolwidget.cpp  devicecontrolwidget.h  parameterwidget.cpp  parameterwidget.h  securitywidget.cpp  securitywidget.h  uiupdateoptimizer.cpp  uiupdateoptimizer.h
src/utils/: checksum.cpp  checksum.h  utils.cpp  utils.h
tests/: main.cpp  test_datamodels.cpp  test_datamodels.h  testframework.cpp  testframework.h
